--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: bash
 
 env:
+  - BUILDX_VERSION=0.8.2 DOCKER_VERSION=test
+  - BUILDX_VERSION=0.8.2 DOCKER_VERSION=stable
   - BUILDX_VERSION=0.4.2 DOCKER_VERSION=test
   - BUILDX_VERSION=0.4.2 DOCKER_VERSION=stable
   - BUILDX_VERSION=0.4.2 DOCKER_VERSION=19.03
@@ -22,6 +24,6 @@ branches:
     - master
 
 script:
-  - docker build --build-arg BUILDX_VERSION=$BUILDX_VERSION --build-arg DOCKER_VERSION=$DOCKER_VERSION -t jdrouet/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION .
+  - docker build --build-arg BUILDX_VERSION=$BUILDX_VERSION --build-arg DOCKER_VERSION=$DOCKER_VERSION -t jiramot/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push jdrouet/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION
+  - docker push jiramot/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION
